assets/css/fixedheader.css
header.site-header {
  position: sticky;
  top: 0;
  background-color: rgba(255, 255, 255, 0.85); /* Semi-transparent white */
  z-index: 1000;
}

/* header.site-header a {
  text-decoration: none;
} */

img.profile-image {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: none;
  margin-right: 10px;
}

.header-col {
  float: left;
  font-size: 14px;
  margin-top: 5px;
  margin-left: 20px;
  vertical-align: middle;
}

.header-col ul {
  margin-bottom: 0;
}

